# personal-jira

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml  ruff.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.omc/: project-memory.json
.omc/state/: agent-replay-a11bbc69-cefb-4a8e-9b3d-dcada96e12e9.jsonl  agent-replay-e0154729-db72-4b78-a8ef-90b6ac921c6c.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.worktrees/task--------------FastAPI-70eb34ae/: .env.example  pyproject.toml
.worktrees/task-----------FastAPI-02bd1a20/: .env.example  pyproject.toml
.worktrees/task-----------FastAPI-d93c0f63/: .env.example  pyproject.toml
.worktrees/task-----------FastAPI-d93c0f63/app/: config.py  database.py  main.py
.worktrees/task-----------FastAPI-d93c0f63/tests/: conftest.py  test_config.py  test_database.py  test_main.py
.worktrees/task-2fdac7b2/: .gitignore
.worktrees/task-3a78ad64/: .env  .env.example  pyproject.toml
.worktrees/task-3a78ad64/alembic/: env.py
.worktrees/task-3a78ad64/app/: config.py  database.py  main.py
.worktrees/task-3a78ad64/tests/: conftest.py  test_config.py  test_database.py  test_main.py
.worktrees/task-40e921aa/: pyproject.toml
.worktrees/task-40e921aa/alembic/: env.py
.worktrees/task-40e921aa/app/: main.py
.worktrees/task-40e921aa/tests/: conftest.py  test_health.py
.worktrees/task-DB------SQLAlchemy-async-3f8a0b20/: pyproject.toml
.worktrees/task-Git-ca96fd46/: .editorconfig  README.md
.worktrees/task-cddd44c8/: pyproject.toml
.worktrees/task-e9b5bacf/: .env.example  .gitignore  pyproject.toml
.worktrees/task-e9b5bacf/alembic/: env.py
.worktrees/task-e9b5bacf/app/: config.py  database.py  main.py
.worktrees/task-e9b5bacf/tests/: conftest.py  test_config.py  test_database.py  test_main.py
.worktrees/task-pytest---httpx-1784653b/: pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  003_add_issue_templates.py  003_add_sprints_table.py  add_attachments_table.py
api/: code_artifacts.py
app/: database.py  main.py
app/api/: agents.py  claim.py
app/models/: agent.py
app/routers/: issues.py
app/schemas/: agent.py  claim.py  issue_search.py
app/services/: agent.py  claim.py  exceptions.py  issue_search_service.py
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py  db.py  exceptions.py  main.py
backend/app/core/: config.py  database.py  error_handlers.py  exceptions.py
backend/app/models/: __init__.py  activity.py  agent.py  base.py  epic.py  issue.py  label.py  story.py  task.py  task_label.py
backend/app/routers/: agents.py  dashboard.py  epics.py  labels.py  stories.py  tasks.py
backend/app/schemas/: agent.py  common.py  epic.py  label.py  story.py  task.py
backend/app/services/: base.py  label.py
backend/scripts/: start.sh
backend/src/personal_jira/: app.py  config.py  database.py
backend/tests/: conftest.py  test_alembic.py  test_alembic_config.py  test_app.py  test_backend_structure.py  test_config.py  test_conftest.py  test_core.py  test_core_config_db.py  test_cors.py  test_database.py  test_exceptions.py  test_health.py  test_label_models.py  test_main.py  test_models.py  test_models_activity.py  test_models_agent.py  test_project_structure.py  test_routers_agents.py  test_routers_epics.py  test_routers_labels.py  test_schemas.py  test_schemas_agent.py  test_schemas_common.py  test_schemas_epic.py  test_schemas_label.py  test_services_base.py  test_services_label.py  test_structure.py
docs/: ARCHITECTURE.md  CONVENTIONS.md  PROJECT.md  api-spec.md  architect_output.md  designer_output.md  skeleton.md  work-log.md
docs/agents/: SHARED_LESSONS.md  agent-backend.md  agent-docs.md  agent-frontend.md  agent-git.md
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.module.css  App.test.tsx  App.tsx  index.css  main.tsx  router.tsx
models/: code_artifact.py
personal_jira/: app.py  config.py  database.py
schemas/: code_artifact.py
services/: code_artifact.py
src/: App.css  App.tsx  database.py  index.css
tests/: conftest.py  conftest_activity.py  test_activity_api.py  test_activity_handlers.py  test_activity_model.py  test_activity_service.py  test_agent_api.py  test_agent_features.py  test_agent_model.py  test_agent_schemas.py  test_agent_service.py  test_agent_sprint_models.py  test_assign.py  test_attachment.py  test_attachments.py  test_auto_return.py  test_backend_setup.py  test_bulk_update.py  test_claim_service.py  test_code_artifact.py  test_comment_crud.py  test_connection_manager.py  test_context_bundle.py  test_context_bundle_api.py  test_dashboard_stats.py  test_database.py  test_dependency_api.py  test_dependency_model.py  test_dependency_release.py  test_dependency_service.py  test_docker_compose.py  test_docker_compose_integration.py  test_docker_infrastructure.py  test_dockerfiles.py  test_env_file.py  test_event_broadcaster.py  test_event_schemas.py  test_gitignore.py  test_hierarchy_api.py  test_hierarchy_service.py  (+33 more)
workspace/: docker-compose.yml
workspace/backend/: alembic.ini  pyproject.toml  requirements.txt
workspace/backend/alembic/: env.py
workspace/backend/alembic/versions/: 6fdcdb7761f8_initial_tables.py
workspace/backend/app/: main.py
workspace/backend/app/core/: config.py  database.py
workspace/backend/app/models/: __init__.py  base.py  epic.py  label.py  story.py  task.py  task_label.py
workspace/backend/app/routers/: health.py
workspace/backend/app/schemas/: __init__.py  common.py  epic.py  label.py  story.py  task.py
workspace/backend/scripts/: start.sh
workspace/backend/tests/: test_alembic.py  test_alembic_env.py  test_health.py  test_pyproject.py  test_schemas.py
(+550 files in other folders)
